--- a/examples/guides/zoom-based-styling/step-4.html
+++ b/examples/guides/zoom-based-styling/step-4.html
@@ -49,9 +49,9 @@
         // Define Viz object and custom style
         const viz = new carto.Viz(`
                 color: white
-                width: 1
+                width: ramp(zoomrange([12,18]),[1,20])
                 strokeColor: green
-                strokeWidth: 0.5    
+                strokeWidth: 0.5 
         `);
 
         // Define map layer
