--- a/examples/guides/ramp/accidents-numeric-histogram.html
+++ b/examples/guides/ramp/accidents-numeric-histogram.html
@@ -40,7 +40,7 @@
     <script>
         const map = new mapboxgl.Map({
             container: 'map',
-            style: 'https://basemaps.cartocdn.com/gl/dark-matter-gl-style/style.json',
+            style: carto.basemaps.darkmatter,
             center: [-96, 41],
             zoom: 3.5,
         });
