--- a/examples/guides/ramp/election-basic.html
+++ b/examples/guides/ramp/election-basic.html
@@ -20,7 +20,7 @@
     <script>
         const map = new mapboxgl.Map({
             container: 'map',
-            style: 'https://basemaps.cartocdn.com/gl/dark-matter-gl-style/style.json',
+            style: carto.basemaps.darkmatter,
             center: [-3, 55.8],
             zoom: 4.5,
         });
