--- a/examples/guides/ramp/population-density-colors.html
+++ b/examples/guides/ramp/population-density-colors.html
@@ -70,7 +70,7 @@
     <script>
         const map = new mapboxgl.Map({
             container: 'map',
-            style: 'https://basemaps.cartocdn.com/gl/dark-matter-gl-style/style.json',
+            style: carto.basemaps.darkmatter,
             center: [8, 20],
             zoom: 2.2,
         });
