--- a/examples/guides/interactivity/step-4.html
+++ b/examples/guides/interactivity/step-4.html
@@ -59,7 +59,7 @@
 
         // Viz using a dynamic variable
         const viz = new carto.Viz(`
-            @currentFeatures: viewportFeatures()
+            @currentFeatures: viewportCount()
             @name: $name
             @popK: $pop_max / 1000.0
         `);
@@ -76,7 +76,7 @@
 
         // Add on 'updated' event handler to layer
         const displayNumberOfCities = () => {
-            const numberOfFeatures = viz.variables.currentFeatures.value.length;
+            const numberOfFeatures = viz.variables.currentFeatures.value;
             console.log(`Now you can see ${numberOfFeatures} cities`);
         };
         layer.on('updated', displayNumberOfCities);
