--- a/examples/guides/animation/step-2.html
+++ b/examples/guides/animation/step-2.html
@@ -24,15 +24,12 @@
             zoom: 2.8,
             scrollZoom: false
         });
-        map.touchZoomRotate.disableRotation();
 
-        const nav = new mapboxgl.NavigationControl({
-            showCompass: false
-        });
+        const nav = new mapboxgl.NavigationControl();
         map.addControl(nav, 'top-left');
 
         //** CARTO VL functionality begins here **//
-        
+
         // Autenticate the client
         carto.setDefaultAuth({
             username: 'cartovl',
