--- a/examples/guides/animation/step-6.html
+++ b/examples/guides/animation/step-6.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- Include CARTO VL JS -->
-    <script src="../../../../dist/carto-vl.js"></script>
+    <script src="../../../dist/carto-vl.js"></script>
     <!-- Include Mapbox GL JS -->
     <script src="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.js"></script>
     <!-- Include Mapbox GL CSS -->
@@ -24,11 +24,8 @@
             zoom: 2.8,
             scrollZoom: false
         });
-        map.touchZoomRotate.disableRotation();
 
-        const nav = new mapboxgl.NavigationControl({
-        showCompass: false
-        });
+        const nav = new mapboxgl.NavigationControl();
         map.addControl(nav, 'top-left');
 
         //** CARTO VL functionality begins here **//
@@ -41,7 +38,7 @@
 
         // Define source
         const source = new carto.source.Dataset('bird_journey');
-        
+
         // Define and style Viz object
         const viz = new carto.Viz(`
           @duration: 10
@@ -51,7 +48,7 @@
           width: 10
           strokeWidth: 0
         `);
-        
+
         // Define map layer
         const layer = new carto.Layer('layer', source, viz);
 
