Adjust map's center to better fit dataset

--- a/examples/guides/animation/step-0.html
+++ b/examples/guides/animation/step-0.html
@@ -30,7 +30,7 @@
         const map = new mapboxgl.Map({
             container: 'map',
             style: carto.basemaps.darkmatter,
-            center: [-22.6995, 41.94674],
+            center: [-0.12796893854942937, 35.1654623242204],
             zoom: 2.8,
             scrollZoom: false
         });
