--- a/examples/guides/zoom-based-styling/step-8.html
+++ b/examples/guides/zoom-based-styling/step-8.html
@@ -2,20 +2,14 @@
 <html>
 
 <head>
-    <!-- Include CARTO VL JS -->
+    <meta charset="utf-8">
+
     <script src="../../../dist/carto-vl.js"></script>
-    <!-- Include Mapbox GL JS -->
-    <script src="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.js"></script>
-    <!-- Include Mapbox GL CSS -->
-    <link href="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.css" rel="stylesheet" />
-    <!-- Make the map visible -->
-    <style>
-        #map {
-            position: absolute;
-            height: 100%;
-            width: 100%;
-        }
-    </style>
+
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css' rel='stylesheet' />
+
+    <link rel="stylesheet" type="text/css" href="../../style.css">
 </head>
 
 <body>
@@ -67,7 +61,7 @@
         const layer = new carto.Layer('layer', source, viz);
 
         // Add map layer
-        layer.addTo(map,'watername_ocean');
+        layer.addTo(map, 'watername_ocean');
     </script>
 </body>
 
