--- a/examples/guides/zoom-based-styling/step-8.html
+++ b/examples/guides/zoom-based-styling/step-8.html
@@ -21,8 +21,7 @@
             container: 'map',
             style: carto.basemaps.darkmatter,
             center: [-123.098599, 49.240685],
-            zoom: 11,
-            dragRotate: false,
+            zoom: 11
         });
 
         // Add zoom controls
