--- a/examples/guides/zoom-based-styling/step-6.html
+++ b/examples/guides/zoom-based-styling/step-6.html
@@ -10,11 +10,26 @@
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css' rel='stylesheet' />
 
     <link rel="stylesheet" type="text/css" href="../../style.css">
+    <style>
+        #js-zoom {
+            position: absolute;
+            bottom: 0;
+            padding: 0 5px;
+            background-color: rgba(255, 255, 255, 0.5);
+            margin: 0;
+            color: rgba(0, 0, 0, 0.75);
+            font-size: 16px;
+        }
+    </style>
 </head>
 
 <body>
     <!-- Add map container -->
     <div id="map"></div>
+
+    <!-- Zoom indicator -->
+    <div id="js-zoom"></div>
+
     <script>
         // Add basemap and set properties
         const map = new mapboxgl.Map({
@@ -27,6 +42,14 @@
         // Add zoom controls
         const nav = new mapboxgl.NavigationControl();
         map.addControl(nav, 'top-left');
+
+        // Zoom level
+        function updateZoom() {
+            const zoom = map.getZoom().toFixed(2);
+            document.getElementById('js-zoom').innerText = `Zoom: ${zoom}`;
+        }
+        map.on('load', updateZoom);
+        map.on('move', updateZoom);
 
         //** CARTO VL functionality begins here **//
 
