Debugging: various fixes

--- a/debug/timerange.html
+++ b/debug/timerange.html
@@ -89,7 +89,11 @@
       width: linear(@month, '2018-01', '2018-09')*60
       color: ramp(linear(@month), SUNSET)
       // TODO: animation should use start, end propertie automatically
-      filter: animation(linear(@month))
+      // filter: animation(linear(@month))
+
+      @start: linear(@month,,,'start')
+      @end: linear(@month,,,'end')
+      filter: animation(@start, 10, fade(0.01, HOLD)) and animation(@end, 10, fade(HOLD, 0.01))
 
       // TODO: buckets should use category?
       // @selMonths: buckets(@month, ['2018-04', '2018-06', '2018-07', '2018-09'])
@@ -104,14 +108,14 @@
     let info = true;
     const animation = viz.filter.expressionName === 'animation' ? viz.filter : null;
     layer.on('updated', () => {
-      if (info) {
-        info = !animation;
-        console.log(viz);
-        console.log("Min Month", viz.variables.minMonth.value);
-        console.log("Max Month", viz.variables.maxMonth.value);
-        console.log('Months:',viz.variables.list.value.map(f => viz.variables.month.eval(f).text));
-        // console.log('Months:',viz.variables.list.value.map(f => f[viz.variables.month.propertyName]));
-      }
+      // if (info) {
+      //   info = !animation;
+      //   console.log(viz);
+      //   console.log("Min Month", viz.variables.minMonth.value);
+      //   console.log("Max Month", viz.variables.maxMonth.value);
+      //   console.log('Months:',viz.variables.list.value.map(f => viz.variables.month.eval(f).text));
+      //   // console.log('Months:',viz.variables.list.value.map(f => f[viz.variables.month.propertyName]));
+      // }
       if (animation) {
         const time = animation.getProgressValue();
         document.getElementById("timer").textContent = time;
