--- a/examples/interactivity/select-between-layers.html
+++ b/examples/interactivity/select-between-layers.html
@@ -4,20 +4,29 @@
   <title>Select layer | CARTO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
+  <!-- Include CARTO VL JS -->
   <script src="../../dist/carto-vl.js"></script>
-  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js'></script>
-  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css' rel='stylesheet' />
+  <!-- Include Mapbox GL JS -->
+  <script src="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.js"></script>
+  <!-- Include Mapbox GL CSS -->
+  <link href="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.css" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
+
+  <!-- Add map container -->
   <div id="map"></div>
+
+  <!-- Add title/legend box -->
   <aside class="toolbox">
     <div class="box">
       <header>
-        <h1>Select layer</h1>
+        <h1>Select a source layer</h1>
       </header>
       <section>
-        <p class="description open-sans">Update the source of your layers</p>
+        <p class="description open-sans">Select between multiple source layers</p>
+
+        <!-- Add radio button controls -->
         <div id="controls">
           <ul class="actions">
             <li>
@@ -36,9 +45,10 @@
           <div id="info"></div>
         </div>
       </section>
-      <footer class="js-footer"></footer>
     </div>
   </aside>
+
+  <!-- Add layer load indicator -->
   <div id="loader">
     <div class="CDB-LoaderIcon CDB-LoaderIcon--big">
       <svg class="CDB-LoaderIcon-spinner" viewBox="0 0 50 50">
@@ -46,7 +56,10 @@
       </svg>
     </div>
   </div>
+
   <script>
+
+    // Add basemap and set properties
     const map = new mapboxgl.Map({
       container: 'map',
       style: carto.basemaps.voyager,
@@ -57,10 +70,13 @@
 
     });
 
+    // Add zoom controls
     const nav = new mapboxgl.NavigationControl({
       showCompass: false
     });
     map.addControl(nav, 'top-left');
+
+    //** CARTO VL functionality begins here **//
 
     // Define user
     carto.setDefaultAuth({
@@ -68,34 +84,39 @@
       apiKey: 'default_public'
     });
 
-    // Define sources
+    // Define first source
     const allCitiesSource = new carto.source.SQL(`
       SELECT *
         FROM populated_places
     `);
+    // Define second source
     const europeanCitiesSource = new carto.source.SQL(`
       SELECT *
         FROM populated_places
         WHERE adm0name IN (SELECT admin FROM ne_adm0_europe)
     `);
+    // Define third source
     const spanishCitiesSource = new carto.source.SQL(`
       SELECT *
         FROM populated_places
         WHERE adm0name = 'Spain'
     `);
 
-    // Define layer
+    // Define Viz object and custom style
     const citiesViz = new carto.Viz(`
-      width: 8
+      width: 5
       color: #6A5ACD
       strokeWidth: 0.5
       strokeColor: #191970
     `);
+
+    // Define map layer
     const citiesLayer = new carto.Layer('citiesLayer', allCitiesSource, citiesViz);
 
+    // Add map layer
     citiesLayer.addTo(map, 'watername_ocean');
-    citiesLayer.on('loaded', hideLoader);
 
+    // Define layer selection behavior
     function setAllCities() {
       citiesLayer.update(allCitiesSource, citiesViz);
     }
@@ -105,9 +126,14 @@
     function setSpanishCities() {
       citiesLayer.update(spanishCitiesSource, citiesViz);
     }
+
+    // Define loader behavior and style when layer draws
+    citiesLayer.on('loaded', hideLoader);
     function hideLoader() {
       document.getElementById('loader').style.opacity = '0';
     }
+
   </script>
+
 </body>
 </html>
