Rename experimental TimeAnimation

--- a/debug/timerange.html
+++ b/debug/timerange.html
@@ -99,7 +99,7 @@
       // filter: animation(clusterTimeRange($date, 'month', 'Europe/Madrid'), 10, fade(0.01, 0.01)) // poor support
 
 
-      filter: timeAnimation(@month, 10, fade(0.01, 0.01))
+      filter: timeRangeAnimation(@month, 10, fade(0.01, 0.01))
 
       // filter: animation(linear(@month), 10, fade(0.2, 0.2))
 
