--- a/examples/guides/ramp/population-density-basic.html
+++ b/examples/guides/ramp/population-density-basic.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Add layer | CARTO</title>
+    <title>Outliers | CARTO</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <!-- Include CARTO VL JS -->
@@ -26,35 +26,35 @@
                 <div id="controls">
                     <ul class="actions">
                         <li>
-                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp($dn, [green, yellow, red])')" id="viz1" checked>
+                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp($dn, [midnightblue, deeppink, gold])')" id="viz1" checked>
                             <label for="viz1">
                                 <h2>ramp($dn, [green, yellow, red])</h2>
                                 <p class="description open-sans">This will be implicitly casted to <span>ramp(linear($population_density), [green, yellow, red])</span> which will be implicitly <span>casted to ramp(linear($population_density, globalMin($population_density), globalMax($population_density)), [green, yellow, red])</span></p>
                             </label>
                         </li>
                         <li>
-                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn), [green, yellow, red])')" id="viz2">
+                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn), [midnightblue, deeppink, gold])')" id="viz2">
                             <label for="viz2">
                                 <h2>ramp(linear($dn), [green, yellow, red])</h2>
                                 <p class="description open-sans">Equivalent to the above example due to implicit casts</p>
                             </label>
                         </li>
                         <li>
-                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn, globalMin($dn), globalMax($dn)), [green, yellow, red])')" id="viz3">
+                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn, globalMin($dn), globalMax($dn)), [midnightblue, deeppink, gold])')" id="viz3">
                             <label for="viz3">
                                 <h2>ramp(linear($dn, globalMin($dn), globalMax($dn)), [green, yellow, red])</h2>
                                 <p  class="description open-sans">Equivalent to the above examples due to implicit casts</p>
                             </label>
                         </li>
                         <li>
-                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn, 0, 160), [green, yellow, red])')" id="viz4">
+                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn, 0, 160), [midnightblue, deeppink, gold])')" id="viz4">
                             <label for="viz4">
                                 <h2>ramp(linear($dn, 0, 160), [green, yellow, red])</h2>
                                 <p class="description open-sans">The data range has been fixed to the [0, 160] range</p>
                             </label>
                         </li>
                         <li>
-                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn, globalPercentile($dn, 1), globalPercentile($dn, 99)), [green, yellow, red])')" id="viz5">
+                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn, globalPercentile($dn, 1), globalPercentile($dn, 99)), [midnightblue, deeppink, gold])')" id="viz5">
                             <label for="viz5">
                                 <h2>ramp(linear($dn, globalPercentile($dn, 1), globalPercentile($dn, 99)), [green, yellow, red])</h2>
                                 <p  class="description open-sans">The data range has been set to avoid taking into account the first 1% of the data and the last 1% of the data. For dynamic datasets this is better than the previous fixed approach.</p>
@@ -83,8 +83,8 @@
 
         const source = new carto.source.Dataset("pop_density_points");
         const viz = new carto.Viz(`
-            width: 2
-            color: ramp($dn, [green, yellow, red])
+            width: 2.5
+            color: ramp($dn, [midnightblue, deeppink, gold])
             strokeWidth: 0
         `);
         const layer = new carto.Layer('layer', source, viz);
