--- a/examples/guides/ramp/population-density-basic.html
+++ b/examples/guides/ramp/population-density-basic.html
@@ -1,17 +1,17 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
-    <title>Outliers | CARTO</title>
+    <title>Implicit casting | CARTO</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <!-- Include CARTO VL JS -->
-    <script src="../../../dist/carto-vl.js"></script>
+    <script src="https://libs.cartocdn.com/carto-vl/branches/971-guides-aggregation/carto-vl.min.js"></script>
     <!-- Include Mapbox GL JS -->
     <script src="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.js"></script>
     <!-- Include Mapbox GL CSS -->
     <link href="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="../../style.css">
+    <link href="https://carto.com/developers/carto-vl/examples/maps/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -19,46 +19,23 @@
     <aside class="toolbox">
         <div class="box">
             <header>
-                <h1>Select Visualization</h1>
+                <h1>Implicit casts</h1>
             </header>
             <section>
-                <p class="description open-sans">Change the visualization of the layer</p>
+                <p class="description open-sans">Select a style</p>
                 <div id="controls">
                     <ul class="actions">
                         <li>
                             <input type="radio" name="source" onclick="viz.color.blendTo('ramp($dn, [midnightblue, deeppink, gold])')" id="viz1" checked>
-                            <label for="viz1">
-                                <h2>ramp($dn, [green, yellow, red])</h2>
-                                <p class="description open-sans">This will be implicitly casted to <span>ramp(linear($population_density), [green, yellow, red])</span> which will be implicitly <span>casted to ramp(linear($population_density, globalMin($population_density), globalMax($population_density)), [green, yellow, red])</span></p>
-                            </label>
+                            <label for="viz1">Style 1</label>
                         </li>
                         <li>
                             <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn), [midnightblue, deeppink, gold])')" id="viz2">
-                            <label for="viz2">
-                                <h2>ramp(linear($dn), [green, yellow, red])</h2>
-                                <p class="description open-sans">Equivalent to the above example due to implicit casts</p>
-                            </label>
+                            <label for="viz1">Style 2</label>
                         </li>
                         <li>
                             <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn, globalMin($dn), globalMax($dn)), [midnightblue, deeppink, gold])')" id="viz3">
-                            <label for="viz3">
-                                <h2>ramp(linear($dn, globalMin($dn), globalMax($dn)), [green, yellow, red])</h2>
-                                <p  class="description open-sans">Equivalent to the above examples due to implicit casts</p>
-                            </label>
-                        </li>
-                        <li>
-                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn, 0, 160), [midnightblue, deeppink, gold])')" id="viz4">
-                            <label for="viz4">
-                                <h2>ramp(linear($dn, 0, 160), [green, yellow, red])</h2>
-                                <p class="description open-sans">The data range has been fixed to the [0, 160] range</p>
-                            </label>
-                        </li>
-                        <li>
-                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn, globalPercentile($dn, 1), globalPercentile($dn, 99)), [midnightblue, deeppink, gold])')" id="viz5">
-                            <label for="viz5">
-                                <h2>ramp(linear($dn, globalPercentile($dn, 1), globalPercentile($dn, 99)), [green, yellow, red])</h2>
-                                <p  class="description open-sans">The data range has been set to avoid taking into account the first 1% of the data and the last 1% of the data. For dynamic datasets this is better than the previous fixed approach.</p>
-                            </h2>
+                            <label for="viz1">Style 3</label>
                         </li>
                     </ul>
                     <div id="info"></div>
@@ -83,7 +60,7 @@
 
         const source = new carto.source.Dataset("pop_density_points");
         const viz = new carto.Viz(`
-            width: 2.5
+            width: 2
             color: ramp($dn, [midnightblue, deeppink, gold])
             strokeWidth: 0
         `);
