--- a/examples/guides/ramp/population-density-buckets.html
+++ b/examples/guides/ramp/population-density-buckets.html
@@ -55,7 +55,7 @@
 
         const source = new carto.source.Dataset("pop_density_points");
         const viz = new carto.Viz(`
-            width: scaled(0.7)
+            width: 2
             color: ramp(buckets($dn, [80, 160]), [midnightblue, deeppink, gold])
             strokeWidth: 0
         `);
