--- a/examples/guides/ramp/population-density-classified.html
+++ b/examples/guides/ramp/population-density-classified.html
@@ -70,7 +70,7 @@
 
         const source = new carto.source.Dataset("pop_density_points");
         const viz = new carto.Viz(`
-            width: scaled(0.7)
+            width: 2
             color: ramp(globalQuantiles($dn, 3), [midnightblue, deeppink, gold])
             strokeWidth: 0
         `);
