--- a/examples/guides/ramp/election-others-bucket.html
+++ b/examples/guides/ramp/election-others-bucket.html
@@ -32,8 +32,8 @@
 
         const source = new carto.source.Dataset("uk_elections ");
         const viz = new carto.Viz(`
-            color: ramp(buckets($winner, ["Conservative Party", "Labour Party"]), [blue, red], white)
-            strokeColor: opacity(white, 0.6)`
+            color: ramp(buckets($winner, ["Conservative Party", "Labour Party"]), [royalblue, crimson], orange)
+            strokeColor: strokeColor: rgba(255,255,255,0.6)`
         );
         const layer = new carto.Layer('layer', source, viz);
 
