--- a/examples/guides/ramp/accidents-top.html
+++ b/examples/guides/ramp/accidents-top.html
@@ -19,7 +19,7 @@
     <aside class="toolbox">
         <div class="box">
             <header>
-                <h1>Type of accident</h1>
+                <h1>Weather Conditions</h1>
             </header>
             <section>
                 <div id="controls">
@@ -54,8 +54,9 @@
         const viz = new carto.Viz(`
             width: 10
             strokeWidth: 0.2
-            color: ramp(top($accident_type, 3), [#3969AC, #F2B701, #E73F74], #A5AA99)
-`);
+            strokeColor: black
+            color: ramp(top($weather, 3), [darkorange,darkviolet,darkturquoise], white)
+        `);
         const layer = new carto.Layer('layer', source, viz);
 
         layer.addTo(map, 'watername_ocean');
@@ -79,7 +80,7 @@
 
                 if (color) {
                     colorLegendList +=
-                        `<li><span class="point-mark" style="background-color:${color}; border: 1px solid black;"></span><span>${legend.key.replace('CARTO_VL_OTHERS', 'Rest of types')}</span></li>\n`;
+                        `<li><span class="point-mark" style="background-color:${color}; border: 1px solid black;"></span><span>${legend.key.replace('CARTO_VL_OTHERS', 'Other weather')}</span></li>\n`;
                 }
             });
 
