--- a/examples/guides/ramp/election-others-bucket.html
+++ b/examples/guides/ramp/election-others-bucket.html
@@ -21,8 +21,8 @@
         const map = new mapboxgl.Map({
             container: 'map',
             style: carto.basemaps.darkmatter,
-            center: [-3, 55.8],
-            zoom: 5.55,
+            center: [-0.815850, 52.087124],
+            zoom: 6,
         });
 
         carto.setDefaultAuth({
@@ -33,7 +33,7 @@
         const source = new carto.source.Dataset("uk_elections ");
         const viz = new carto.Viz(`
             color: ramp(buckets($winner, ["Conservative Party", "Labour Party"]), [royalblue, crimson], orange)
-            strokeColor: strokeColor: rgba(255,255,255,0.6)`
+            strokeColor: rgba(255,255,255,0.4)`
         );
         const layer = new carto.Layer('layer', source, viz);
 
