Use double quotes in html attributes
Fixes #1094.

--- a/examples/styling/image-multiple.html
+++ b/examples/styling/image-multiple.html
@@ -3,31 +3,31 @@
 
 <head>
   <title>Multiple Images | CARTO</title>
-  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <meta charset='UTF-8'>
-  <script src='../../dist/carto-vl.js'></script>
-  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js'></script>
-  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css' rel='stylesheet' />
-  <link rel='stylesheet' type='text/css' href='../style.css'>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <script src="../../dist/carto-vl.js"></script>
+  <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js"></script>
+  <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css" rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
 <body>
-  <div id='map'></div>
-  <aside class='toolbox'>
-    <div class='box'>
+  <div id="map"></div>
+  <aside class="toolbox">
+    <div class="box">
       <header>
         <h1>Multiple Images</h1>
       </header>
       <section>
-        <p class='description open-sans'>Assign images to different categories</p>
+        <p class="description open-sans">Assign images to different categories</p>
       </section>
-      <footer class='js-footer'></footer>
+      <footer class="js-footer"></footer>
     </div>
   </aside>
-  <div id='loader'>
-    <div class='CDB-LoaderIcon CDB-LoaderIcon--big'>
-      <svg class='CDB-LoaderIcon-spinner' viewBox='0 0 50 50'>
-        <circle class='CDB-LoaderIcon-path' cx='25' cy='25' r='20' fill='none'></circle>
+  <div id="loader">
+    <div class="CDB-LoaderIcon CDB-LoaderIcon--big">
+      <svg class="CDB-LoaderIcon-spinner" viewBox="0 0 50 50">
+        <circle class="CDB-LoaderIcon-path" cx="25" cy="25" r="20" fill="none"></circle>
       </svg>
     </div>
   </div>
